[gd_scene load_steps=2 format=3 uid="uid://dqq0h0qt6ojv"]

[ext_resource type="Script" uid="uid://pef7qp4mta5m" path="res://Singletons_Autoloads/play_button.gd" id="1_4u0ku"]

[node name="PlayButton" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4u0ku")

[node name="FlowContainer" type="BoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -52.5
offset_top = -29.0
offset_right = 52.5
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1
vertical = true

[node name="Label" type="Label" parent="FlowContainer"]
layout_mode = 2
text = "Shoot-em-up!"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="FlowContainer"]
layout_mode = 2
size_flags_vertical = 4
text = "Play
"

[connection signal="pressed" from="FlowContainer/Button" to="." method="_on_button_pressed"]
